--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-spring": "^8.0.27",
+    "short-id": "^0.1.0-1",
     "typescript": "^4.1.3",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
